5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1644_2446.log
== TEST (2019-04-16 07:18:32) 
-- CODE:
s = float(input)("Senha de seis digitos: ")
a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s=10)%10
f = (s=1)%10
if((b+d+f) % (a+c+e) == 0) :
	print("acesso liberado")
else 
print("senha invalida")
-- ERROR:
File "XXXX", line 6
    e = (s=10)%10
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 07:19:04) 
-- CODE:
s = float(input)("Senha de seis digitos: ")
a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10
if((b+d+f) % (a+c+e) == 0) :
	print("acesso liberado")
else 
print("senha invalida")
-- ERROR:
File "XXXX", line 10
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 07:19:22) 
-- CODE:
s = float(input)("Senha de seis digitos: ")
a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10
if((b+d+f) % (a+c+e) == 0) :
	print("acesso liberado")
else:
print("senha invalida")
-- ERROR:
File "XXXX", line 11
    print("senha invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 07:19:51) 
-- CODE:
s = float(input)("Senha de seis digitos: ")
a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10
if((b+d+f) % (a+c+e) == 0) :
	print("acesso liberado")
else:
   print("senha invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s = float(input)("Senha de seis digitos: ")
TypeError: float() argument must be a string or a number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 07:20:20) 
-- CODE:
s = float(input)("Senha de seis digitos: ")
a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10
if((b+d+f) % (a+c+e) == 0) :
	print("acesso liberado")
else:
   print("senha invalida")
-- EXECUTION TIME:
0.106104
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2446/main.py", line 1, in <module>
    s = float(input)("Senha de seis digitos: ")
TypeError: float() argument must be a string or a number, not 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 07:20:25) 
-- CODE:
s = float(input)("Senha de seis digitos: ")
a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10
if((b+d+f) % (a+c+e) == 0) :
	print("acesso liberado")
else:
   print("senha invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s = float(input)("Senha de seis digitos: ")
TypeError: float() argument must be a string or a number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 07:21:16) 
-- CODE:
s = float((input)("Senha de seis digitos: "))
a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10
if((b+d+f) % (a+c+e) == 0) :
	print("acesso liberado")
else:
   print("senha invalida")
-- OUTPUT:
Senha de seis digitos: acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 07:21:24) 
-- CODE:
s = float((input)("Senha de seis digitos: "))
a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10
if((b+d+f) % (a+c+e) == 0) :
	print("acesso liberado")
else:
   print("senha invalida")
-- EXECUTION TIME:
0.15226
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
Senha de seis digitos: acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
Senha de seis digitos: senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
Senha de seis digitos: acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 07:21:36) 
-- CODE:
s = float((input)("Senha de seis digitos: "))
a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10
if((b+d+f) % (a+c+e) == 0) :
	print("acesso liberado")
else:
   print("senha invalida")
-- OUTPUT:
Senha de seis digitos: acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 07:22:32) 
-- CODE:
s = float((input)("Senha de seis digitos: "))
a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10
if((b+d+f) % (a+c+e) == 0) :
	print("acesso liberado")
else:
   print("senha invalida")
-- EXECUTION TIME:
0.137231
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
Senha de seis digitos: acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
Senha de seis digitos: senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
Senha de seis digitos: acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 07:22:37) 
-- CODE:
s = float((input)("Senha de seis digitos: "))
a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10
if((b+d+f) % (a+c+e) == 0) :
	print("acesso liberado")
else:
   print("senha invalida")
-- OUTPUT:
Senha de seis digitos: acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 07:25:36) 
-- CODE:
s = float((input)("Senha de seis digitos: "))
a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10
if((b+d+f) % (a+c+e) == 0) :
	print("acesso liberado")
else:
   print("senha invalida") 
-- OUTPUT:
Senha de seis digitos: acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:31:47) 
-- CODE:
s = float((input)("Senha de seis digitos: "))
a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10
if((b+d+f) % (a+c+e) == 0) :
	print("acesso liberado")
else:
   print("senha invalida") 
-- OUTPUT:
Senha de seis digitos: acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:32:21) 
-- CODE:
s = float((input)("Senha de seis digitos: "))
a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10
if((b+d+f) % (a+c+e) == 0) :
	print("acesso liberado")
else:
   print("senha invalida") 
-- OUTPUT:
Senha de seis digitos: acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 15:32:35) 
-- CODE:
s = float((input)("Senha de seis digitos: "))
a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10
if((b+d+f) % (a+c+e) == 0) :
	print("acesso liberado")
else:
   print("senha invalida") 
-- EXECUTION TIME:
0.697775
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
Senha de seis digitos: acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
Senha de seis digitos: senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
Senha de seis digitos: acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:32:45) 
-- CODE:
s = float((input)("Senha de seis digitos: "))
a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10
if((b+d+f) % (a+c+e) == 0) :
	print("acesso liberado")
else:
   print("senha invalida") 
-- OUTPUT:
Senha de seis digitos: acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:33:38) 
-- CODE:
s = int((input)("Senha de seis digitos: "))
a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10
if((b+d+f) % (a+c+e) == 0) :
	print("acesso liberado")
else:
   print("senha invalida") 
-- OUTPUT:
Senha de seis digitos: acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 15:33:49) 
-- CODE:
s = int((input)("Senha de seis digitos: "))
a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10
if((b+d+f) % (a+c+e) == 0) :
	print("acesso liberado")
else:
   print("senha invalida") 
-- EXECUTION TIME:
0.55294
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
Senha de seis digitos: acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
Senha de seis digitos: senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
Senha de seis digitos: acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:34:30) 
-- CODE:
s = int((input)("Senha de seis digitos: "))
a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10

if ( (b + d + f) % (a + c + e) == 0):
	print("acesso liberado")
else:
   print("senha invalida") 
-- OUTPUT:
Senha de seis digitos: acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:34:37) 
-- CODE:
s = int((input)("Senha de seis digitos: "))
a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10

if ( (b + d + f) % (a + c + e) == 0):
	print("acesso liberado")
else:
   print("senha invalida") 
-- OUTPUT:
Senha de seis digitos: acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 15:34:41) 
-- CODE:
s = int((input)("Senha de seis digitos: "))
a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10

if ( (b + d + f) % (a + c + e) == 0):
	print("acesso liberado")
else:
   print("senha invalida") 
-- EXECUTION TIME:
0.787038
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
Senha de seis digitos: acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
Senha de seis digitos: senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
Senha de seis digitos: acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:34:44) 
-- CODE:
s = int((input)("Senha de seis digitos: "))
a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10

if ( (b + d + f) % (a + c + e) == 0):
	print("acesso liberado")
else:
   print("senha invalida") 
-- OUTPUT:
Senha de seis digitos: acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:36:08) 
-- CODE:
s = int((input)("Senha de seis digitos: "))

a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10

if ( (b + d + f) % (a + c + e) == 0):
	print("acesso liberado")
else:
   print("senha invalida") 
-- OUTPUT:
Senha de seis digitos: acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 15:36:12) 
-- CODE:
s = int((input)("Senha de seis digitos: "))

a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10

if ( (b + d + f) % (a + c + e) == 0):
	print("acesso liberado")
else:
   print("senha invalida") 
-- EXECUTION TIME:
0.793299
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
Senha de seis digitos: acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
Senha de seis digitos: senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
Senha de seis digitos: acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:36:17) 
-- CODE:
s = int((input)("Senha de seis digitos: "))

a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10

if ( (b + d + f) % (a + c + e) == 0):
	print("acesso liberado")
else:
   print("senha invalida") 
	
-- OUTPUT:
Senha de seis digitos: acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 15:36:18) 
-- CODE:
s = int((input)("Senha de seis digitos: "))

a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10

if ( (b + d + f) % (a + c + e) == 0):
	print("acesso liberado")
else:
   print("senha invalida") 
	
-- EXECUTION TIME:
0.766479
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
Senha de seis digitos: acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
Senha de seis digitos: senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
Senha de seis digitos: acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 15:36:21) 
-- CODE:
s = int((input)("Senha de seis digitos: "))

a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10

if ( (b + d + f) % (a + c + e) == 0):
	print("acesso liberado")
else:
   print("senha invalida") 
	
-- EXECUTION TIME:
0.731689
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
Senha de seis digitos: acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
Senha de seis digitos: senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
Senha de seis digitos: acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:37:31) 
-- CODE:
s = int((input)("Senha de seis digitos: "))

a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10

if ( (b + d + f) % (a + c + e) == 0):
	print("acesso liberado")
else:
   print("senha invalida")
-- OUTPUT:
Senha de seis digitos: acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:37:44) 
-- CODE:
s = int((input)("Senha de seis digitos: "))

a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10

if ( (b + d + f) % (a + c + e) == 0):
	print("acesso liberado")
else:
   print("senha invalida")
-- OUTPUT:
Senha de seis digitos: acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:37:56) 
-- CODE:
s = int((input)("Senha de seis digitos: "))

a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10

if ( (b + d + f) % (a + c + e) == 0):
	print("acesso liberado")
else:
   print("senha invalida")
-- OUTPUT:
Senha de seis digitos: acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 15:37:59) 
-- CODE:
s = int((input)("Senha de seis digitos: "))

a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10

if ( (b + d + f) % (a + c + e) == 0):
	print("acesso liberado")
else:
   print("senha invalida")
-- EXECUTION TIME:
0.495407
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
Senha de seis digitos: acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
Senha de seis digitos: senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
Senha de seis digitos: acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:38:28) 
-- CODE:
s = int((input)("Senha de seis digitos: "))

a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10

if ( (b + d + f) % (a + c + e) = 0):
	print("acesso liberado")
else:
   print("senha invalida")
-- ERROR:
File "XXXX", line 10
    if ( (b + d + f) % (a + c + e) = 0):
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:38:36) 
-- CODE:
s = int((input)("Senha de seis digitos: "))

a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10

if ( (b + d + f) % (a + c + e) == 0):
	print("acesso liberado")
else:
   print("senha invalida")
-- OUTPUT:
Senha de seis digitos: acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:38:57) 
-- CODE:
s = int((input)(""))

a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10

if ( (b + d + f) % (a + c + e) == 0):
	print("acesso liberado")
else:
   print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 15:39:06) 
-- CODE:
s = int((input)(""))

a = (s//100000)%10
b = (s//10000)%10
c = (s//1000)%10
d = (s//100)%10
e = (s//10)%10
f = (s//1)%10

if ( (b + d + f) % (a + c + e) == 0):
	print("acesso liberado")
else:
   print("senha invalida")
-- EXECUTION TIME:
0.569094
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
